añadir imagenes andando

--- a/views/admin-product.ejs
+++ b/views/admin-product.ejs
@@ -29,9 +29,8 @@
                             </div>
 
                             <div class="input-box">
-                                <label for="imgLabel" class="input-box">Imagen</label>
-                                <!-- <input type="file" name="file" accept="image/*" id="imgLabel" required class="inputBoxImage"> -->
-                                <input type="file" accept="image/*" name="file" id="imgLabel" class="inputBoxImage" required>
+                                <label for="imgLabel" class="inputBoxFile">Imagen</label>
+                                <input type="file" name="file" accept="image/*" id="imgLabel" required class="inputBoxImage">
                             </div>
                             <div class="input-box">
                                 <label for="descLabel">Detalle</label>
