--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -19,12 +19,12 @@
  
     }
 
-    &__img {
-        width: 100%;
-        height:100%;
-        object-fit: cover;
+    // &__img {
+    //     width: 100%;
+    //     height:100%;
+    //     object-fit: cover;
         
-    }
+    // }
  
     // &__img:hover {
     //     // transform: scale(1.10);
