--- a/scss/pages/_admin-product.scss
+++ b/scss/pages/_admin-product.scss
@@ -40,9 +40,9 @@ body {
     border: none;
 }
 
-input[type="file"] {
-    display: none;
-}
+// input[type="file"] {
+//     display: none;
+// }
 
 
 .inputBoxText{
