--- a/views/admin-product.ejs
+++ b/views/admin-product.ejs
@@ -29,8 +29,8 @@
                             </div>
 
                             <div class="input-box">
-                                <label for="imgLabel" class="inputBoxFile">Imagen</label>
-                                <input type="file" name="file" accept="image/*" id="imgLabel" required class="inputBoxImage">
+                                <label for="imgLabel" class="descLabel">Imagen</label>
+                                <input type="file" name="file" accept="image/*" id="imgLabel" required class="inputBoxTextDetail">
                             </div>
                             <div class="input-box">
                                 <label for="descLabel">Detalle</label>
