--- a/css/main.css
+++ b/css/main.css
@@ -1182,6 +1182,21 @@ body {
   border: none;
 }
 
+.chooseFile {
+  background-color: indigo;
+  color: white;
+  padding: 0.5rem;
+  font-family: sans-serif;
+  border-radius: 0.3rem;
+  cursor: pointer;
+  margin-top: 1rem;
+}
+
+#file-chosen {
+  margin-left: 0.3rem;
+  font-family: sans-serif;
+}
+
 .inputBoxText {
   width: 20rem;
   border-radius: 0.3rem;
