--- a/scss/pages/_admin-product.scss
+++ b/scss/pages/_admin-product.scss
@@ -40,6 +40,20 @@ body {
     border: none;
 }
 
+.chooseFile{
+    background-color: indigo;
+    color: white;
+    padding: 0.5rem;
+    font-family: sans-serif;
+    border-radius: 0.3rem;
+    cursor: pointer;
+    margin-top: 1rem;
+}
+#file-chosen{
+    margin-left: 0.3rem;
+    font-family: sans-serif;
+  }
+
 // input[type="file"] {
 //     display: none;
 // }
