--- a/views/admin-product.ejs
+++ b/views/admin-product.ejs
@@ -24,20 +24,20 @@
                             </div>
 
                             <div class="input-box">
-                                <label for="priceLabel" >Precio</label>
+                                <label for="priceLabel">Precio</label>
                                 <input type="number" name="price" id="priceLabel" required class="inputBox">
                             </div>
-
                             <div class="input-box">
                                 <label for="imgLabel" class="descLabel">Imagen</label>
-                                <input type="file" name="file" accept="image/*" id="imgLabel" required class="inputBoxTextDetail">
+                                <input type="file" name="file" accept="image/*" id="imgLabel" required>
                             </div>
+   
                             <div class="input-box">
                                 <label for="descLabel">Detalle</label>
                                 <textarea name="detail" id="descLabel" rows="8" required class="inputBoxTextDetail">
                             </textarea>
                             </div>
-<!-- 
+                            <!-- 
                             <div class="input-box">
                                 <label for="stockLabel">Stock</label>
                                 <input type="checkbox" name="stock" id="stockLabel">
