--- a/views/admin-user.ejs
+++ b/views/admin-user.ejs
@@ -16,24 +16,30 @@
                                 <label for="nameLabel">Nombre</label>
                                 <input type="text" name="fullName" id="nameLabel" required class="inputBox">
                             </div>
+                            <div class="register__casillero">
+                                <label for="avatar" class="register__text1"> Avatar:</label> <br>
+                                <input type="file" name="avatar" id="avatar" class="register__age" min="12" max="130">
+                            </div>
                             <div class="input-box">
                                 <label for="nameLabel">Apellido</label>
                                 <input type="text" name="surname" id="nameLabel" required class="inputBox">
                             </div>
                             <div class="input-box">
                                 <label for="mailLabel">Email</label>
-                                <input type ="email" name="mail" id="mailLabel" required class="inputBox" placeholder="nombre@ejemplo.com" minlength="8" maxlength="45" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
+                                <input type="email" name="mail" id="mailLabel" required class="inputBox"
+                                    placeholder="nombre@ejemplo.com" minlength="8" maxlength="45"
+                                    pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
                             </div>
                             <div class="input-box">
                                 <label for="rolLabel">ROL</label>
                                 <input type="text" name="rol" id="RolLabel" required class="inputBox">
                             </div>
-                    
+
                             <!-- <div class="input-box">
                                 <label for="nameLabel">Creado</label>
                                 <input type="text" name="name" id="nameLabel" required class="inputBox">
                             </div> -->
-        
+
                             <button type="submit" class="submit-btn" id="submit-btn-user">Añadir</button>
                         </form>
                         <div class="table-container">
@@ -49,14 +55,14 @@
                                     </tr>
                                 </thead>
                                 <tbody id="table-body-Users">
-                                    
+
                                 </tbody>
                             </table>
                         </div>
-                        
+
                     </div>
                 </div>
-        </div>
+            </div>
 
 
 
