--- a/views/admin-product.ejs
+++ b/views/admin-product.ejs
@@ -29,7 +29,7 @@
                             </div>
                             <div class="input-box">
                                 <label for="imgLabel" class="descLabel">Imagen</label>
-                                <input type="file" name="file" accept="image/*" id="imgLabel" required>
+                                <input type="file" name="file" accept="image/*" id="imgLabel">
                             </div>
    
                             <div class="input-box">
