--- a/views/admin-product.ejs
+++ b/views/admin-product.ejs
@@ -27,7 +27,7 @@
                                 <label for="priceLabel">Precio</label>
                                 <input type="number" name="price" id="priceLabel" required class="inputBox">
                             </div>
-                            <div class="input-box">
+                            <div class="input-box" id="uploadImageInput">
                                 <label for="imgLabel" class="descLabel">Imagen</label>
                                 <input type="file" name="file" accept="image/*" id="imgLabel">
                             </div>
