--- a/public/css/main.css
+++ b/public/css/main.css
@@ -142,8 +142,9 @@ body {
 }
 
 .alert-dialog {
-  position: absolute;
-  top: 75%;
+  position: fixed;
+  z-index: 25;
+  bottom: 30%;
   left: 50%;
   transform: translateX(-50%);
   background-color: #85a089;
@@ -1179,7 +1180,20 @@ body {
   border: none;
 }
 
+.chooseFile {
+  background-color: indigo;
+  color: white;
+  padding: 0.5rem;
+  font-family: sans-serif;
+  border-radius: 0.3rem;
+  cursor: pointer;
+  margin-top: 1rem;
+}
 
+#file-chosen {
+  margin-left: 0.3rem;
+  font-family: sans-serif;
+}
 
 .inputBoxText {
   width: 20rem;
