editar producto terminado

--- a/views/admin-user.ejs
+++ b/views/admin-user.ejs
@@ -16,10 +16,10 @@
                                 <label for="nameLabel">Nombre</label>
                                 <input type="text" name="fullName" id="nameLabel" required class="inputBox">
                             </div>
-                            <div class="register__casillero">
+                            <!-- <div class="register__casillero">
                                 <label for="avatar" class="register__text1"> Avatar:</label> <br>
                                 <input type="file" name="avatar" id="avatar" class="register__age" min="12" max="130">
-                            </div>
+                            </div> -->
                             <div class="input-box">
                                 <label for="nameLabel">Apellido</label>
                                 <input type="text" name="surname" id="nameLabel" required class="inputBox">
