--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -3,6 +3,11 @@
     padding-top: 3rem;
     background-color: rgb(235, 234, 234);
 }
+.card__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 .card {
     display: flex;
     flex-direction: column;
@@ -19,12 +24,12 @@
  
     }
 
-    // &__img {
-    //     width: 100%;
-    //     height:100%;
-    //     object-fit: cover;
+    &__img {
+        width: 100%;
+        height:100%;
+        object-fit: cover;
         
-    // }
+    }
  
     // &__img:hover {
     //     // transform: scale(1.10);
