anda boton buscar

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,11 +27,11 @@
                                 <label for=""></label>
                                 <div>
                                     <input type="text" class="product-search__input" placeholder="Buscar..." autofocus
-                                        onkeyup="metodoFilter(event)">
+                                        onkeyup="metodoFilter(event)" id="searchProductBtn">
 
                                 </div>
                                 <div class="product-search__btnDiv">
-                                    <button class="product-search__btn" >Buscar</button>
+                                    <button class="product-search__btn" onclick="searchProduct(event)" id="productId">Buscar</button>
                                 </div>
 
                             </div>
