--- a/views/product-detail.ejs
+++ b/views/product-detail.ejs
@@ -22,6 +22,7 @@
 
                 <!-- =================JS=================  -->
                 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+                <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
                 <script src="/js/header.js"></script>
                 <script src="/js/alert.js"></script>
                 <script src="/js/index.js"></script>
