--- a/views/admin-user.ejs
+++ b/views/admin-user.ejs
@@ -87,7 +87,7 @@
                 <script src="/js//date.js"></script>
                 <script src="/js/users.js"></script>
                 <script src="/js/header.js"></script>
-                <script src="/js/isAdmin.js"></script>
+                <!-- <script src="/js/isAdmin.js"></script> -->
                 <script src="/js/cartUpdate.js"></script>
                 <script src="/js/loginUserAvatar.js"></script>
 
