--- a/scss/pages/_admin-user.scss
+++ b/scss/pages/_admin-user.scss
@@ -7,6 +7,12 @@
 body {
     font-family: Helvetica, sans-serif;
 }
+.submit-btn-user1{
+    padding: .5rem 1rem;
+    width: 20rem;
+    border: 2px solid rgb(51, 87, 2);
+    color: white;
+}
 .adminContainer{
     padding-top: 5rem;
 }
