--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1499,6 +1499,14 @@ body {
   font-family: Helvetica, sans-serif;
 }
 
+.submit-btn-user1 {
+  padding: 0.5rem 1rem;
+  width: 20rem;
+  border: 2px solid rgb(51, 87, 2);
+  color: white;
+  background-color: green;
+}
+
 .adminContainer {
   padding-top: 5rem;
 }
@@ -1854,7 +1862,7 @@ body {
   margin-bottom: 1rem;
 }
 
-.submit-btn-products {
+.submit-btn-user {
   padding: 0.5rem 1rem;
   width: 20rem;
   border: 2px solid rgb(51, 87, 2);
