--- a/scss/pages/_orders.scss
+++ b/scss/pages/_orders.scss
@@ -52,7 +52,7 @@ body {
     margin-bottom: 1rem;
 }
 
-.submit-btn-products {
+.submit-btn-user {
     padding: .5rem 1rem;
     width: 20rem;
     border: 2px solid rgb(51, 87, 2);
