--- a/views/register.ejs
+++ b/views/register.ejs
@@ -17,7 +17,7 @@
             </div>
             <div class="register__casillero">
                 <label for="idInputSurname" class="register__text1">Apellido</label><br>
-                <input type="text" name="surname" id="idInputSurname" required class="register__box" minlength="3" maxlength="40" size="50" autofocus >
+                <input type="text" name="surname" id="nameLabel" required class="register__box" minlength="3" maxlength="40" size="50" autofocus >
             </div>
 
             <div class="register__casillero">
