--- a/scss/pages/_admin-user.scss
+++ b/scss/pages/_admin-user.scss
@@ -12,6 +12,7 @@ body {
     width: 20rem;
     border: 2px solid rgb(51, 87, 2);
     color: white;
+    background-color: green;
 }
 .adminContainer{
     padding-top: 5rem;
