--- a/views/admin-user.ejs
+++ b/views/admin-user.ejs
@@ -23,7 +23,7 @@
                             </div> -->
                             <div class="input-box">
                                 <label for="nameLabel">Apellido</label>
-                                <input type="text" name="surname" id="nameLabel" required class="inputBox" minlength="3" maxlength="40" size="50" autofocus>>
+                                <input type="text" name="surname" id="nameLabel" required class="inputBox" minlength="3" maxlength="40" size="50" autofocus>
                             </div>
                             <div class="input-box">
                                 <label for="mailLabel">Email</label>
@@ -39,14 +39,14 @@
                                 </select>
                             </div>
 
-                            <div class="input-box">
-                                <label for="passwordInput">Contraseña</label> <br>
+                            <div class="input-box" id="passwordName">
+                                <label for="passwordInput"   >Contraseña</label> <br>
                                 <input type="password" name="password" id="passwordInput" required class="inputBox" minlength="6" maxlength="45"> 
                             </div>
                 
-                            <div class="input-box">
-                                <label for="passwordInput2"> Repetir Contraseña</label> <br>
-                                <input type="password" name="password2" id="passwordInput2" required class="inputBox" minlength="6" maxlength="45"> 
+                            <div class="input-box" id="passwordName1">
+                                <label for="passwordInput2" > Repetir Contraseña</label> <br>
+                                <input type="password" name="password2" id="passwordInput" required class="inputBox" minlength="6" maxlength="45"> 
                             </div>
                             <div class="input-box">
                                 <label for="ageInput"> Edad </label> <br>
@@ -60,7 +60,7 @@
                 
                             <div class="input-box">
                                 <label for="countryInput">Seleccione su pais</label>
-                                <select name="country" id="countryInput" class="register__country"   >
+                                <select name="country" id="countryInput"  class="inputBox"   >
                                     
                                     <!-- <option></option> -->
                                 
