--- a/scss/pages/_admin-product.scss
+++ b/scss/pages/_admin-product.scss
@@ -7,6 +7,21 @@
 body {
     font-family: Helvetica, sans-serif;
 }
+.oculto{
+    display:none;
+    visibility: hidden;
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+
+
+
+ }
 .adminContainer{
     padding-top: 5rem;
 }
