--- a/views/admin-user.ejs
+++ b/views/admin-user.ejs
@@ -25,7 +25,7 @@
                                 <label for="nameLabel">Apellido</label>
                                 <input type="text" name="surname" id="nameLabel" required class="inputBox" minlength="3" maxlength="40" size="50" autofocus>
                             </div>
-                            <div class="input-box">
+                            <div class="input-box" id="nameEmail">
                                 <label for="mailLabel">Email</label>
                                 <input type="email" name="email" id="mailLabel" required class="inputBox"
                                     placeholder="nombre@ejemplo.com" minlength="6" maxlength="45"
@@ -46,7 +46,7 @@
                 
                             <div class="input-box" id="passwordName1">
                                 <label for="passwordInput2" > Repetir Contraseña</label> <br>
-                                <input type="password" name="password2" id="passwordInput" required class="inputBox" minlength="6" maxlength="45"> 
+                                <input type="password" name="password2" id="passwordInput2" required class="inputBox" minlength="6" maxlength="45"> 
                             </div>
                             <div class="input-box">
                                 <label for="ageInput"> Edad </label> <br>
