--- a/views/register.ejs
+++ b/views/register.ejs
@@ -347,15 +347,16 @@
                 <!-- =================JS=================  -->
                 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
                 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-                <script src="/js/register"></script>
+                <!-- <script src="/js/register"></script> -->
                 <script src="/js/registerUser.js"></script>
                 <script src="/js/date.js"></script>
                 <script src="/js/header.js"></script>
                 <script src="/js/alert.js"></script>
                 <script src="/js/loginUserAvatar.js"></script>
-                <script src="/js/filter.js"></script>
-                <script src="/js/btnBuy.js"></script>
-                <script src="/js/orderFinal.js"></script>
+                <!-- <script src="/js/filter.js"></script> -->
+                <!-- <script src="/js/btnBuy.js"></script> -->
+                <!-- <script src="/js/orderFinal.js"></script> -->
+
 
 
 
