--- a/views/admin-user.ejs
+++ b/views/admin-user.ejs
@@ -338,6 +338,7 @@
                                         <th>Email</th>
                                         <th>ROL</th>
                                         <th>ID Usuario</th>
+                                        <th>Password Encriptado</th>
                                         <th>Acciones</th>
                                     </tr>
                                 </thead>
