--- a/views/admin-product.ejs
+++ b/views/admin-product.ejs
@@ -55,6 +55,7 @@
                                         <th>Descripción</th>
                                         <th>Precio</th>
                                         <th>Detalle</th>
+                                        <th>ID Producto</th>
                                         <th>Acciones</th>
                                     </tr>
                                 </thead>
