--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,8 @@
 
                                 </div>
                                 <div class="product-search__btnDiv">
-                                    <button class="product-search__btn" onclick="searchProduct(event)" id="productId">Buscar</button>
+                                    <button class="product-search__btn" onclick="searchProduct(event)"
+                                        id="productId">Buscar</button>
                                 </div>
 
                             </div>
@@ -67,30 +68,38 @@
                 </div>
 
                 <!-- =================JS=================  -->
-                <!-- <script>
+                <script>
                     let orderUser = JSON.parse(localStorage.getItem("currentUser"))
                     function showNotUser() {
                         console.log("anda boton")
                         if (!orderUser) {
-                            showAlert("Deberia lograrse para comprar", 'error')
+                            swal({
+                                title: "Deberia loguearse para comprar",
+                                icon: 'warning',
+                            })
 
                         }
                     }
-                </script> -->
+                </script>
 
                 <!-- AXIOS -->
                 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
                 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-                <script src="/js/adminUser.js"></script>
+                <script src="/js/adminProducts.js"></script>
                 <script src="/js//date.js"></script>
+                <script src="/js/add-product"></script>
                 <script src="/js/header.js"></script>
                 <script src="/js/alert.js"></script>
                 <script src="/js/indexProducts.js"></script>
+                <script src="/js/orderFinal.js"></script>
                 <script src="/js/loginUserAvatar.js"></script>
                 <script src="/js/filter.js"></script>
                 <script src="/js/btnBuy.js"></script>
                 <script src="/js/cartUpdate.js"></script>
                 <script src="/js/orderFinalMongoDB.js"></script>
+
+
+
 
 
     </body>
