--- a/views/index.ejs
+++ b/views/index.ejs
@@ -69,10 +69,10 @@
 
                 <!-- =================JS=================  -->
                 <script>
-                    let orderUser = JSON.parse(localStorage.getItem("currentUser"))
+                    let orderUser2 = JSON.parse(localStorage.getItem("currentUser"))
                     function showNotUser() {
                         console.log("anda boton")
-                        if (!orderUser) {
+                        if (!orderUser2) {
                             swal({
                                 title: "Deberia loguearse para comprar",
                                 icon: 'warning',
