--- a/views/index.ejs
+++ b/views/index.ejs
@@ -85,18 +85,19 @@
                 <!-- AXIOS -->
                 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
                 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-                <script src="/js/adminProducts.js"></script>
+                <!-- <script src="/js/adminProducts.js"></script> -->
+                <script src="/js/btnBuy.js"></script>
                 <script src="/js//date.js"></script>
-                <script src="/js/add-product"></script>
+                <!-- <script src="/js/add-product"></script> -->
                 <script src="/js/header.js"></script>
                 <script src="/js/alert.js"></script>
                 <script src="/js/indexProducts.js"></script>
-                <script src="/js/orderFinal.js"></script>
+                <!-- <script src="/js/orderFinal.js"></script> -->
                 <script src="/js/loginUserAvatar.js"></script>
                 <script src="/js/filter.js"></script>
-                <script src="/js/btnBuy.js"></script>
-                <script src="/js/cartUpdate.js"></script>
+
                 <script src="/js/orderFinalMongoDB.js"></script>
+
 
 
 
