--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -111,6 +111,15 @@
         border-radius: 8px;
         // pointer-events: none;  
     }
+    &__btn-buy {
+        padding: 1rem 1.5rem;
+        background-color: #c3a343;
+        color: white;
+        border-radius: 8px;
+        border: 0;
+        cursor: pointer;
+        font-size: 1rem;
+    }
 
     &__btn:hover {
         box-shadow: 0 0 5px #858585;
@@ -124,7 +133,16 @@
         border: 0;
         cursor: pointer;
         font-size: 1rem;
-        pointer-events: none;   
+    }
+    &__btn-buy2   {
+        padding: 1rem 1.5rem;
+        background-color: #c3a343;
+        color: white;
+        border-radius: 8px;
+        border: 0;
+        cursor: pointer;
+        font-size: 1rem;
+
     }
     &__btn-buy1:hover{
         box-shadow: 0 0 5px #858585;
@@ -135,6 +153,7 @@
         box-shadow: 0 0 5px #858585;
         transition: all 0.5s ease;
     }
+    
 
 
 
