--- a/views/index.ejs
+++ b/views/index.ejs
@@ -68,7 +68,7 @@
                 </div>
 
                 <!-- =================JS=================  -->
-                <script>
+                <!-- <script>
                     let orderUser2 = JSON.parse(localStorage.getItem("currentUser"))
                     function showNotUser() {
                         console.log("anda boton")
@@ -80,7 +80,7 @@
 
                         }
                     }
-                </script>
+                </script> -->
 
                 <!-- AXIOS -->
                 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
