--- a/views/product-detail.ejs
+++ b/views/product-detail.ejs
@@ -26,10 +26,11 @@
                 <script src="/js/header.js"></script>
                 <script src="/js/alert.js"></script>
                 <script src="/js/index.js"></script>
-                <script src="/js/orderFinal.js"></script>
+                <!-- <script src="/js/orderFinal.js"></script> -->
                 <script src="/js/product-detail.js"></script>
                 <script src="/js/cartUpdate.js"></script>
                 <script src="/js/btnBuy.js"></script>
+                <script src="/js/orderFinalMongoDB.js"></script>
 
 
     </body>
