--- a/scss/pages/_orders.scss
+++ b/scss/pages/_orders.scss
@@ -357,7 +357,7 @@ body {
         border-radius: 1px;
         // margin: 0 auto;
         background-color:white;
-        width: 5rem;
+        width: 6rem;
         border: 1px solid rgba(20, 20, 20, 0.3);
 
     }
@@ -371,6 +371,24 @@ body {
         cursor: pointer;
         // padding: 0.5rem;
     }
+    &__boton-order1{
+
+        height: 1.7rem;
+        width:1.5rem;
+        border: none;
+        background-color:white;
+        cursor: pointer;
+        // padding: 0.5rem;
+    }
+    &__boton-number {
+        height: 1.7rem;
+        width:1.5rem;
+        border: none;
+        background-color:white;
+        cursor: pointer;
+        text-align: center;
+        // padding: 0.5rem;
+    }
 
 }
 .buy-btn-container{
@@ -379,18 +397,28 @@ body {
     text-align: center;
 
 }
-.buy-btn {
+// .buy-btn {
 
+//     margin-top: 1rem;
+//     padding: .5rem 1rem;
+//     width: 10rem;
+//     border: 2px solid green;
+//     color: white;
+//     background-color: green;
+//     cursor: pointer;
+// }
+.buy-btn{
     margin-top: 1rem;
-    padding: .5rem 1rem;
-    width: 10rem;
-    border: 2px solid green;
+    padding: 1rem 1.5rem;
+    background-color: #c3a343;
     color: white;
-    background-color: green;
+    border-radius: 8px;
+    border: 0;
     cursor: pointer;
+    font-size: 1rem;
 }
 .buy-btn:hover{
-    background-color: rgb(1, 105, 1);
+    background-color:  #ac954f;
 }
 .buy-btn-empty{
     visibility: hidden;
