--- a/views/order.ejs
+++ b/views/order.ejs
@@ -31,7 +31,7 @@
                                 </tbody>
                                 <tr>
                                     <th colspan="4" class="final-price">PRECIO TOTAL</th>
-                                    <th class="final-price-number" id="totalPrice">PRECIO TOTAL</th>
+                                    <th class="final-price-number" id="totalPrice"></th>
                                     <th class="final-price-number"></th>
                                 </tr>
                             </table>
