--- a/scss/pages/_orders.scss
+++ b/scss/pages/_orders.scss
@@ -304,6 +304,15 @@ body {
     &__containerNumber{
         padding-top: 0.4rem;
     }
+    &__containerNumber1{
+        height: 1.7rem;
+        width:1.5rem;
+        border: none;
+        background-color:white;
+        cursor: pointer;
+        text-align: center;
+        // padding: 0.5rem;
+    }
     &__link{
         color: rgb(71, 71, 71);
     }
