--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,7 +20,8 @@
 @import "pages/location";
 @import "pages/admin-product";
 @import "pages/admin-user";
-@import "pages/orders"
+@import "pages/orders";
+@import "pages/admin-orders"
 
 
 
