--- a/views/admin-orders.ejs
+++ b/views/admin-orders.ejs
@@ -11,7 +11,7 @@
 
             <div class="main">
                 <div class="adminContainer">
-                    <h1 class="header1">ORDEN DE COMPRA</h1>
+                    <h1 class="header1">ORDEN POR USUARIO</h1>
                     <div class="container">
                         <div class="table-container-order">
                             <table class="table-product">
