--- a/views/admin-orders.ejs
+++ b/views/admin-orders.ejs
@@ -35,9 +35,6 @@
                                     <th class="final-price-number"></th>
                                 </tr>
                             </table>
-                            <div class="buy-btn-container">
-                                <button class="buy-btn" onclick="buyEnd()" id="btnEnd">Finalizar Compra</button>
-                            </div>
                         </div>
 
                     </div>
@@ -67,6 +64,7 @@
                 <script src="/js/btnBuy.js"></script>
                 <!-- <script src="/js/orderFinal.js"></script> -->
                 <script src="/js/orderFinalMongoDB.js"></script>
+                <script src="/js/adminOrders.js"></script>
 
 
     </body>
