--- a/views/admin-orders.ejs
+++ b/views/admin-orders.ejs
@@ -17,37 +17,10 @@
                     <div class="container">
                         <form id="add-product" class="product-form-admin" onsubmit="addProduct(event)">
                             <div class="input-box">
-                                <label for="nameLabel">Producto</label>
-                                <input type="text" name="name" id="nameLabel" required class="inputBox">
+                                <label for="nameLabel">Usuario</label>
+                                <input type="text" name="name" id="nameLabel" required class="inputBox" placeholder="Buscar..." autofocus  onkeyup="metodoFilter(event)" id="searchProductBtn">
                             </div>
-                            <div class="input-box">
-                                <label for="descLabel">Descripción</label>
-                                <textarea name="description" id="descLabel" rows="4" required class="inputBoxText">
-                            </textarea>
-                            </div>
-
-                            <div class="input-box">
-                                <label for="priceLabel">Precio</label>
-                                <input type="number" name="price" id="priceLabel" required class="inputBox">
-                            </div>
-                            <div class="input-box" id="uploadImageInput">
-                                <label for="imgLabel" class="descLabel">Imagen</label>
-                                <input type="file" name="file" accept="image/*" id="imgLabel">
-                            </div>
-   
-                            <div class="input-box">
-                                <label for="descLabel">Detalle</label>
-                                <textarea name="detail" id="descLabel" rows="8" required class="inputBoxTextDetail">
-                            </textarea>
-                            </div>
-                            <!-- 
-                            <div class="input-box">
-                                <label for="stockLabel">Stock</label>
-                                <input type="checkbox" name="stock" id="stockLabel">
-                            </div> -->
-
-
-                            <button type="submit" class="submit-btn-products" id="submit-btn">Cargar Producto</button>
+                            <button type="submit" class="submit-btn-products" id="submit-btn" onclick="searchProduct(event)">Buscar orden por Usuario</button>
                         </form>
                         <div class="table-container">
                             <table class="table-product">
